# StellPoker

./: .env.example  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: benchmark-regression.yml  docker-build-push.yml  publish-api-docs.yml  publish-stellar-zk-cards.yml
app/src/components/: Board.tsx  Card.tsx  HandHistoryPanel.tsx  Identicon.tsx  PlayerSeat.tsx  Table.tsx
app/src/lib/: alias-store.ts  feature-flags.ts  hand-history.ts  hand-rank.ts  identicon.ts  use-feature-flags.ts
circuits/lib/src/: cards.nr
circuits/reveal_board_valid/: Nargo.toml  Prover.toml
circuits/reveal_board_valid/src/: main.nr
contracts/committee-registry/: Cargo.toml
contracts/committee-registry/src/: lib.rs
contracts/poker-table/: Cargo.toml
contracts/poker-table/src/: game.rs  invariants_test.rs  lib.rs  pot.rs  test.rs  types.rs
docs/: contract-callgraph.md
docs/api/: README.md  index.html  openapi.yaml  versions.json
docs/api/v0.1.0/: changelog.md
infrastructure/logging/: README.md  docker-compose.logging.yml
infrastructure/logging/grafana/dashboards/: stellpoker-overview.json
infrastructure/logging/grafana/provisioning/datasources/: loki.yaml
infrastructure/logging/k8s/: grafana-deployment.yaml  loki-deployment.yaml  namespace.yaml  promtail-daemonset.yaml
infrastructure/logging/loki/: loki-config.yaml
infrastructure/logging/promtail/: promtail-config.yaml
scripts/: api-docs-compare.sh  benchmark_check.py  contract_callgraph.py  deploy-local.sh  soak-test.py  start-local.sh
services/coordinator/: Cargo.toml  README.md
services/coordinator/migrations/: 20240625000000_add_rate_limits_cors_audit.down.sql  20240625000000_add_rate_limits_cors_audit.up.sql
services/coordinator/src/: audit_log.rs  cors_db.rs  feature_flags.rs  main.rs  mpc.rs  rate_limit_db.rs  session_migration.rs
services/coordinator/src/api/: admin_extended.rs  flags.rs  mod.rs  parsing.rs  types.rs
services/coordinator/src/soroban/: mod.rs  proofs.rs
services/node/: Cargo.toml  Dockerfile
services/node/src/: main.rs
stellar-zk-cards/: Cargo.toml  README.md
stellar-zk-cards/src/: lib.rs
tests/: README.md
(+1 files in other folders)
