[package]
name = "mpc-node"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
tempfile = "3"
rand = "0.8"
ark-ff = "0.4"
ark-bn254 = "0.4"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
